--- a/appointment.html
+++ b/appointment.html
@@ -80,7 +80,7 @@
           <p>Schedule an appointment</p>
         </div>
 
-        <form action="forms/book-a-table.php" method="post" role="form" class="php-email-form" data-aos="fade-up" data-aos-delay="100">
+        <form action="/appointment-receptionist" method="POST" role="form" class="php-email-form" data-aos="fade-up" data-aos-delay="100">
           <div class="row">
             <div class="col-lg-4 col-md-6 form-group">
               <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars">
@@ -107,16 +107,24 @@
               <div class="validate"></div>
             </div>
             <div class="col-lg-4 col-md-6 form-group mt-3 mt-md-0">
-              <input type="text" class="form-control" name="phone" id="phone" placeholder="CNP" data-rule="minlen:4" data-msg="Please enter at least 4 chars">
+              <input type="text" class="form-control" name="cnp" id="cnp" placeholder="CNP" data-rule="minlen:4" data-msg="Please enter at least 4 chars">
               <div class="validate"></div>
             </div>
             <div class="col-lg-4 col-md-6 form-group mt-3 mt-md-0">
-              <input type="text" class="form-control" name="phone" id="phone" placeholder="Doctor" data-rule="minlen:4" data-msg="Please enter at least 4 chars">
+              <!--<input type="text" class="form-control" name="doctor" id="doctor" placeholder="Doctor" data-rule="minlen:4" data-msg="Please enter at least 4 chars"> -->
+              <select name="doctor" method="POST" action="/">
+                <option value="{{doclist[0]}}" selected>{{doclist[0]}}</option>
+                {% for doc in doclist[1:] %}
+                <option value="{{doc}}">{{doc}}</option>
+                {% endfor %}
+              </select>
+
+              
               <div class="validate"></div>
             </div>
           </div>
           <div class="form-group mt-3">
-            <textarea class="form-control" name="message" rows="5" placeholder="Message"></textarea>
+            <textarea class="form-control" name="message" id="message" rows="5" placeholder="Message"></textarea>
             <div class="validate"></div>
           </div>
           <div class="mb-3">
